--- a/Iteration/iteration.ipynb
+++ b/Iteration/iteration.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "0eb2d68f-124e-4835-8aca-779736351af4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections.abc import Iterable"
+    "from collections.abc import Iterable\n",
+    "from datetime import date"
    ]
   },
   {
@@ -300,12 +301,357 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53b55dcf-04b2-43b8-b49d-d17410665157",
+   "metadata": {},
+   "source": [
+    "### NB: formated string"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e8be47c6-f795-451a-a28a-2a47de0d6178",
+   "execution_count": 29,
+   "id": "d0c80a63-897d-4ab3-8f3f-01ffe7013de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2023, 6, 19)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day = date.today()\n",
+    "day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3685f3ef-e09c-463f-b1d1-ffa37b822f4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'city: Toulouse, population: 470000, day: 19/06/2023'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"city: {}, population: {}, day: {:%d/%m/%Y}\".format(city, city_t[1], day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "61b84f3e-003a-4e97-b2b8-ff4dd2e1c55f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'city: Toulouse, population: 470000, day: 19/06/2023'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"city: {city}, population: {city_t[1]}, day: {day:%d/%m/%Y}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9133e07f-3271-417f-b101-bdcb1cc2ce47",
+   "metadata": {},
+   "source": [
+    "## 2. Generator, lazy evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b56d867a-cbe3-4936-858b-2fd27f87fb70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generator_cities():\n",
+    "    return (c.upper() for c in cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3d152aa2-f1bd-4564-aa24-07a4b47eed84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object generator_cities.<locals>.<genexpr> at 0x00000251D720A5A0>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = generator_cities()\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ec95150b-acdb-49aa-a04b-cebfecfc246a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(g, Iterable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "0a3be702-dcb3-4130-aacf-9dbfc4b46eef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOULOUSE\n",
+      "LYON\n",
+      "PAU\n",
+      "PARIS\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in g:\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8eefe7df-40f1-4b14-b06e-508e55027c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TOULOUSE', 'LYON', 'PAU', 'PARIS']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = generator_cities()\n",
+    "l = list(g)\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9d90dd26-3c16-4972-aeee-806a2f128638",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TOULOUSE'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = generator_cities()\n",
+    "max(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "3d4acfec-f847-4864-9df5-62e1688ec3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TOULOUSE', 'LYON', 'PAU', 'PARIS']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprhension\n",
+    "[ c.upper() for c in cities ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f5044ff5-2ad1-4ee7-a95b-52b4bf676be4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibo_infinite():\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    yield a\n",
+    "    yield b\n",
+    "    while True:\n",
+    "        a, b = b, a + b\n",
+    "        yield b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8b207038-6c0e-4b4e-9d02-611cb3143314",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object fibo_infinite at 0x00000251D720B100>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = fibo_infinite()\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "aca38731-fad9-468b-88b4-d61010869613",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(10):\n",
+    "    v = next(g)\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "1df75b21-9d12-4e3e-9729-d7963f6eb912",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "68f87bd3-ffcc-4e95-b320-ef0aa37bbe5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibo_n(n):\n",
+    "    \"\"\" generate n values of Fibonacci series\"\"\"\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    if n > 0:\n",
+    "        yield a\n",
+    "    if n > 1:\n",
+    "        yield b\n",
+    "    for _ in range(n-2):\n",
+    "        a, b = b, a + b\n",
+    "        yield b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "7a715e3a-9634-421d-bb49-9a25077af7f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(fibo_n(10))"
+   ]
   }
  ],
  "metadata": {
