--- a/Iteration/iteration.ipynb
+++ b/Iteration/iteration.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "id": "0eb2d68f-124e-4835-8aca-779736351af4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections.abc import Iterable\n",
+    "from collections.abc import Iterable, Iterator\n",
     "from datetime import date"
    ]
   },
@@ -524,6 +524,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b07c005e-a84f-493d-910e-243f0f9d6376",
+   "metadata": {},
+   "source": [
+    "### Fibonacci infinite"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "f5044ff5-2ad1-4ee7-a95b-52b4bf676be4",
@@ -593,23 +601,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "id": "1df75b21-9d12-4e3e-9729-d7963f6eb912",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "144"
+       "233"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# execute this cell as many times as you want\n",
     "next(g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec1098bb-7092-4263-983a-f403c5d942f0",
+   "metadata": {},
+   "source": [
+    "### Fibonacci finite"
    ]
   },
   {
