--- a/Iteration/iteration.ipynb
+++ b/Iteration/iteration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "id": "0eb2d68f-124e-4835-8aca-779736351af4",
    "metadata": {},
    "outputs": [],
@@ -651,23 +651,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "7a715e3a-9634-421d-bb49-9a25077af7f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[0]\n",
+      "[0, 1]\n",
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(fibo_n(0)))\n",
+    "print(list(fibo_n(1)))\n",
+    "print(list(fibo_n(2)))\n",
+    "print(list(fibo_n(10)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d4b7a7-c947-4b08-b693-8457c844aa05",
+   "metadata": {},
+   "source": [
+    "## 3. Iterator/Iterable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "080d57c3-a779-4676-abbe-96bcc0453c7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]"
+       "<list_iterator at 0x251d6e48130>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(fibo_n(10))"
+    "it = iter(cities)\n",
+    "assert '__next__' in dir(it) # duck typing\n",
+    "assert isinstance(it, Iterator) # inheritance\n",
+    "assert isinstance(it, Iterable) # inheritance\n",
+    "it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "55b4edb2-d7d2-453f-83b5-2e594b5570c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Next city: Toulouse\n",
+      "Next city: Lyon\n",
+      "Next city: Pau\n",
+      "Next city: Paris\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        city = next(it)\n",
+    "        print(\"Next city:\", city)\n",
+    "    except StopIteration:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "17ae4973-0e7a-419e-b82d-a0eec36c61b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<list_iterator at 0x251d6e4a950>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "it2 = iter(it)\n",
+    "assert  it2 is it\n",
+    "it2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "66904fe6-52e5-477f-a0e4-c1d38efdc96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Toulouse'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# an iterator is iterable, so any function with an arg iterable can accept it\n",
+    "it = iter(cities)\n",
+    "max(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "459c4119-ee16-400b-ad40-8724bef30209",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Toulouse', 8, 'T'),\n",
+       " (1, 'Lyon', 4, 'o'),\n",
+       " (2, 'Pau', 3, 'u'),\n",
+       " (3, 'Paris', 5, 'l')]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities_with_extra = list(\n",
+    "    zip(\n",
+    "        range(1_000_000_000_000_000),     # lazy + iterable\n",
+    "        cities,                           # iterable\n",
+    "        (len(city) for city in cities),   # generator: iterator/iterable\n",
+    "        iter(cities[0])                   # iterator/iterable\n",
+    "    )\n",
+    ")\n",
+    "cities_with_extra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "62a7f1d4-a79e-4e3f-835a-cb67a573bc51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# range is another lazy object, iterable\n",
+    "range(10)"
    ]
   }
  ],
