--- a/Iteration/iteration.ipynb
+++ b/Iteration/iteration.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 117,
    "id": "0eb2d68f-124e-4835-8aca-779736351af4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections.abc import Iterable, Iterator\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "import functools as fun"
    ]
   },
   {
@@ -830,6 +831,418 @@
    "source": [
     "# range is another lazy object, iterable\n",
     "range(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f9c6da0-9f8e-402a-941c-6d3e52368fd8",
+   "metadata": {},
+   "source": [
+    "#### Builtin functions using Iterable or Iterator\n",
+    " - iter, next: mechanism\n",
+    " - all, any: iterable -> bool\n",
+    " - sum, min, max: iterable -> val\n",
+    " - map, filter (can be expressed with a for expression)\n",
+    " - range\n",
+    " - list, tuple, dict: iterable -> container\n",
+    " - sorted: iterable -> list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd12bb18-1502-4cb7-b604-6ed83383cc1d",
+   "metadata": {},
+   "source": [
+    "### Atelier builtin iterable\n",
+    "1. Est-ce que toutes les villes ont au moins 3 lettres ?\n",
+    "2. Y a t il une ville avec 8 lettres ?\n",
+    "3. Combien de lettres pour écrire toutes les villes (Scrabble) ?\n",
+    "4. liste des villes commençant par P\n",
+    "5. Trier les villes par ordre alphabétique et numéroter les résultats de 1 à n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "f2f906e3-4a54-4ef1-bfa8-0e18101c3d47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r1: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "r1 = all(len(c) >= 3 for c in cities)\n",
+    "print(\"r1:\",r1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "b3c3d129-99e0-4f1b-88a7-76415a989a1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2\n",
+    "any((len(city) == 8) for city in cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "9506f19b-b4c2-465f-b081-6981ef1854b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n', 'r', 'l', 'e', 'o', 'L', 'a', 'i', 'u', 'P', 'T', 'y', 's'}\n",
+      "{'n', 'r', 'l', 'e', 'p', 'o', 'i', 'a', 'u', 'y', 't', 's'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3bis\n",
+    "# ensemble des lettres constitituant les villes (sans répétition)\n",
+    "full_str = \"\"\n",
+    "for city in cities:\n",
+    "    full_str += city\n",
+    "\n",
+    "set_full_str_case = set(full_str)\n",
+    "question3 = set(full_str.lower())\n",
+    "print(set_full_str_case)\n",
+    "print(question3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "1d1b8807-ce82-4e04-81dd-b9c128ffb7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'e', 'i', 'l', 'n', 'o', 'p', 'r', 's', 't', 'u', 'y'}"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# non optimized reduction (generate a new set at each iteration\n",
+    "letters = fun.reduce(set.union, (set(city.lower()) for city in cities), set())\n",
+    "letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "b6699936-b60d-47f5-be67-01c5655292ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3\n",
+    "sum(len(city) for city in cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "0aff7496-bed3-4840-9abe-047db3e1c190",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# NB: an expression for must be parenthesized if more than one arg\n",
+    "sum((len(city) for city in cities), 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "53419126-0374-4c7e-9210-073d3b6a0286",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 4, 3, 5]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ len(city) for city in cities ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "56df80d0-8bd4-4da1-9931-f6d15a2525a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# bad practice ! memory peak\n",
+    "sum([ len(city) for city in cities ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "be9e4fa6-855b-4a45-865e-783fd30072ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cette ville ne commence pas par P\n",
+      "Cette ville ne commence pas par P\n",
+      "Cette ville commence par P\n",
+      "Cette ville commence par P\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Pau', 'Paris']"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4 - sol imperative\n",
+    "res4 = []\n",
+    "for city in cities:\n",
+    "    if city[0]==\"P\":\n",
+    "        res4.append(city)\n",
+    "        print(\"Cette ville commence par P\")\n",
+    "    else: \n",
+    "        print(\"Cette ville ne commence pas par P\")\n",
+    "res4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "cf109ed1-50ac-4a37-9178-3b86793bbf94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Pau', 'Paris']"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4 - sol map/reduce with list comprehension\n",
+    "[city for city in cities if city[0] == 'P']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "c24e967c-cd4b-4381-8d9e-76b1c4aedb5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Pau', 'Paris']"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda c: c.startswith('P'), cities))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "b0b8960f-b282-4288-99ad-500143a7fbc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PAU', 'PARIS']"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(str.upper, filter(lambda c: c.startswith('P'), cities)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "39738c38-2d09-4aa6-ba64-634f90a566e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PAU', 'PARIS']"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ c.upper() for c in cities if  c.startswith('P') ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "57f434be-9d9d-4fc8-8056-cba720e03542",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOULOUSE\n",
+      "TOULOUSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "city = \"Toulouse\"\n",
+    "print(city.upper())\n",
+    "print(str.upper(city))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "e6c83b29-fc22-45f8-b640-8efc829d63a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Lyon'), (2, 'Paris'), (3, 'Pau'), (4, 'Toulouse')]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5\n",
+    "sorted_cities = sorted(cities)\n",
+    "question5 = [(i+1,city) for i, city in enumerate(sorted_cities)]\n",
+    "question5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "42ec9aa0-9fa0-4d9a-aad3-0a534199efaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Lyon'), (2, 'Paris'), (3, 'Pau'), (4, 'Toulouse')]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# enumerate can start at any value (2nd arg)\n",
+    "sorted_cities = sorted(cities)\n",
+    "question5 = list(enumerate(sorted_cities, 1))\n",
+    "question5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "252ab42b-ebce-4be1-b2e0-4cae9051c894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# enumerate is equivalent to zip + range\n",
+    "list(zip(range(1, len(cities)+1), sorted(cities)))"
    ]
   }
  ],
