--- a/Iteration/iteration.ipynb
+++ b/Iteration/iteration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "0eb2d68f-124e-4835-8aca-779736351af4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "from collections.abc import Iterable, Iterator\n",
     "from datetime import date\n",
     "import functools as fun\n",
-    "import itertools"
+    "import itertools\n",
+    "import square as sq"
    ]
   },
   {
@@ -247,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "<method-wrapper '__iter__' of list object at 0x000001AE61C24D00>"
+       "<method-wrapper '__iter__' of list object at 0x00000238C8E34940>"
       ]
      },
      "execution_count": 12,
@@ -402,7 +403,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object generator_cities.<locals>.<genexpr> at 0x000001AE61FC3850>"
+       "<generator object generator_cities.<locals>.<genexpr> at 0x00000238C91D35E0>"
       ]
      },
      "execution_count": 18,
@@ -559,7 +560,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object fibo_infinite at 0x000001AE61FC3030>"
+       "<generator object fibo_infinite at 0x00000238C91D2400>"
       ]
      },
      "execution_count": 25,
@@ -692,7 +693,7 @@
     {
      "data": {
       "text/plain": [
-       "<list_iterator at 0x1ae62035b40>"
+       "<list_iterator at 0x238c9249360>"
       ]
      },
      "execution_count": 30,
@@ -743,7 +744,7 @@
     {
      "data": {
       "text/plain": [
-       "<list_iterator at 0x1ae62035b40>"
+       "<list_iterator at 0x238c9249360>"
       ]
      },
      "execution_count": 32,
@@ -915,8 +916,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'y', 'P', 'e', 'u', 'L', 'r', 's', 'i', 'T', 'o', 'a', 'n', 'l'}\n",
-      "{'p', 'y', 'e', 'u', 'r', 's', 'i', 'o', 'a', 't', 'n', 'l'}\n"
+      "{'s', 'u', 'L', 'P', 'a', 'o', 'n', 'e', 'l', 'i', 'T', 'y', 'r'}\n",
+      "{'t', 's', 'u', 'a', 'o', 'n', 'e', 'p', 'l', 'i', 'y', 'r'}\n"
      ]
     }
    ],
@@ -1169,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "id": "57f434be-9d9d-4fc8-8056-cba720e03542",
    "metadata": {},
    "outputs": [
@@ -1273,8 +1274,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59dee53b-6eb2-4c1d-9edb-68ba89bb2cf1",
+   "metadata": {},
+   "source": [
+    "#### Example: all letters from cities"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "id": "658cf6a7-859d-425e-a4af-3e90263d5755",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1293,7 @@
        "{'a', 'e', 'i', 'l', 'n', 'o', 'p', 'r', 's', 't', 'u', 'y'}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "id": "df8bcad2-2713-49a3-9e32-472d971aae8a",
    "metadata": {},
    "outputs": [],
@@ -1308,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "id": "fe39cc74-71f6-488d-9805-be514849c847",
    "metadata": {},
    "outputs": [
@@ -1316,10 +1325,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'e', 'u', 's', 'o', 't', 'l'}\n",
-      "{'y', 'e', 'u', 's', 'o', 't', 'n', 'l'}\n",
-      "{'p', 'y', 'e', 'u', 's', 'o', 'a', 't', 'n', 'l'}\n",
-      "{'p', 'y', 'e', 'u', 'r', 's', 'i', 'o', 'a', 't', 'n', 'l'}\n"
+      "{'t', 's', 'u', 'o', 'e', 'l'}\n",
+      "{'t', 's', 'u', 'o', 'n', 'e', 'l', 'y'}\n",
+      "{'t', 's', 'u', 'a', 'o', 'n', 'e', 'p', 'l', 'y'}\n",
+      "{'t', 's', 'u', 'a', 'o', 'n', 'e', 'p', 'l', 'i', 'y', 'r'}\n"
      ]
     },
     {
@@ -1328,7 +1337,7 @@
        "{'a', 'e', 'i', 'l', 'n', 'o', 'p', 'r', 's', 't', 'u', 'y'}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 56,
    "id": "f1e46020-7a74-4a39-bcf5-fd1952fc0a8f",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1364,7 @@
        "{'a', 'e', 'i', 'l', 'n', 'o', 'p', 'r', 's', 't', 'u', 'y'}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,8 +1378,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98db8924-fe7d-4b28-860f-f690f1cbf4e3",
+   "metadata": {},
+   "source": [
+    "#### Example of chain"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 57,
    "id": "15fc7ba8-b8c4-410c-8fe3-d33803eda04d",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1397,7 @@
        "['Toulouse', 'Lyon', 'Pau', 'Paris', 'TOU', 'LYO', 'PAU', 'PAR']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,6 +1405,212 @@
    "source": [
     "# exemple chain:\n",
     "list(itertools.chain(cities, (city[:3].upper() for city in cities)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "883a6125-bc5a-481e-95c8-a46ff36e2a08",
+   "metadata": {},
+   "source": [
+    "#### Magic Square\n",
+    "Step 1: calculer toutes les sommes (lignes, colonnes, \"diagonales\")\n",
+    "\n",
+    "Setep 2: enchainer en retournant un boolean sur le caractère magique du carré"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "61db4225-2eb8-46db-ba28-d828e18fc97d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[138, 8, 17, 127, 114, 32, 41, 103, 90, 56, 65, 79],\n",
+       " [19, 125, 140, 6, 43, 101, 116, 30, 67, 77, 92, 54],\n",
+       " [128, 18, 7, 137, 104, 42, 31, 113, 80, 66, 55, 89],\n",
+       " [5, 139, 126, 20, 29, 115, 102, 44, 53, 91, 78, 68],\n",
+       " [136, 10, 15, 129, 112, 34, 39, 105, 88, 58, 63, 81],\n",
+       " [21, 123, 142, 4, 45, 99, 118, 28, 69, 75, 94, 52],\n",
+       " [130, 16, 9, 135, 106, 40, 33, 111, 82, 64, 57, 87],\n",
+       " [3, 141, 124, 22, 27, 117, 100, 46, 51, 93, 76, 70],\n",
+       " [134, 12, 13, 131, 110, 36, 37, 107, 86, 60, 61, 83],\n",
+       " [23, 121, 144, 2, 47, 97, 120, 26, 71, 73, 96, 50],\n",
+       " [132, 14, 11, 133, 108, 38, 35, 109, 84, 62, 59, 85],\n",
+       " [1, 143, 122, 24, 25, 119, 98, 48, 49, 95, 74, 72]]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sq.square_ok_12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "3b80ee6a-3ea4-47ae-b65d-a9539a93ca2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[8, 1, 6], [3, 5, 7], [4, 9, 2]]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sq.square_ok_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "35a3065a-b175-448f-a711-d70e20063b2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[15, 15, 15, 15, 15, 15, 15, 15]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = sq.square_ok_3\n",
+    "# square = sq.square_ko_row\n",
+    "n = len(square)\n",
+    "magicSum = n*(n**2 + 1) // 2\n",
+    "print(magicSum)\n",
+    "sums = list(\n",
+    "    sum(values) for values in itertools.chain(\n",
+    "         square,\n",
+    "         ((square[i][j] for i in range(n)) for j in range(n)),\n",
+    "         (\n",
+    "             (square[i][i] for i in range(n)),\n",
+    "             (square[i][-i-1] for i in range(n)),\n",
+    "             \n",
+    "         )\n",
+    "    )\n",
+    ")\n",
+    "sums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "9fd7c957-fab9-4079-b542-6cc5770e342c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[8, 3, 4], [1, 5, 9], [6, 7, 2]]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# draft: columns\n",
+    "list(list(square[i][j] for i in range(n)) for j in range(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "fef17eec-e481-4657-8c1a-35de32585b0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 5, 2]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# draft diagonal:\n",
+    "list(square[i][i] for i in range(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "af1b0c92-10b7-4932-bb8c-9ca7a5417c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# draft diagonal symetric:\n",
+    "list(square[i][-i-1] for i in range(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "b0b49c91-399f-466b-8c5c-2ab1a4deead2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isMagic = all(\n",
+    "    sum(values) == magicSum  for values in itertools.chain(\n",
+    "         square,\n",
+    "         ((square[i][j] for i in range(n)) for j in range(n)),\n",
+    "         (\n",
+    "             (square[i][i] for i in range(n)),\n",
+    "             (square[i][-i-1] for i in range(n)),\n",
+    "             \n",
+    "         )\n",
+    "    )\n",
+    ")\n",
+    "isMagic"
    ]
   }
  ],
