--- a/Iteration/iteration.ipynb
+++ b/Iteration/iteration.ipynb
@@ -840,7 +840,7 @@
    "id": "4f9c6da0-9f8e-402a-941c-6d3e52368fd8",
    "metadata": {},
    "source": [
-    "#### Builtin functions using Iterable or Iterator\n",
+    "### Builtin functions using Iterable or Iterator\n",
     " - iter, next: mechanism\n",
     " - all, any: iterable -> bool\n",
     " - sum, min, max: iterable -> val\n",
