add et iadd with pattern matching

--- a/Oop/pattern_matching.ipynb
+++ b/Oop/pattern_matching.ipynb
@@ -11,6 +11,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "080b6f6f-38ae-4dc4-a776-bf1b6e5d6442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import IntEnum\n",
+    "from geometry import Point"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f1fce188-ef83-4825-8127-e2bb93e1a492",
    "metadata": {},
@@ -20,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "75ed921a-7eca-4452-a28e-0c330544eeda",
    "metadata": {},
    "outputs": [
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f3a94fcf-6a29-4987-bc5e-909d54395d9b",
    "metadata": {},
    "outputs": [
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "e1e154fe-3635-4f5e-992a-8b4236d330a6",
    "metadata": {},
    "outputs": [
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "879cccef-551f-43ab-89d6-90f364910fff",
    "metadata": {},
    "outputs": [
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "a9238808-3595-44f4-8b24-a0f4ed12b3cd",
    "metadata": {},
    "outputs": [
@@ -216,6 +227,136 @@
     "        case _:\n",
     "            print(\"Cannot process data of type:\", type(d))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3e5d11-ee9c-4809-950d-8bdcfc0cfdfe",
+   "metadata": {},
+   "source": [
+    "## 4. Enum type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "926dd8a5-ad16-41a8-9d34-cfd0f5e76611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Direction(IntEnum):\n",
+    "    WEST=270\n",
+    "    NORTH=0\n",
+    "    EAST=90\n",
+    "    SOUTH=180    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9235c765-badf-4968-a62f-4804be8e8a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Go to the ocean\n",
+      "Go to a pole\n",
+      "Go to the sea\n",
+      "Go to a pole\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in Direction:\n",
+    "    match d:\n",
+    "        case Direction.WEST:\n",
+    "            print(\"Go to the ocean\")\n",
+    "        case Direction.NORTH | Direction.SOUTH:\n",
+    "            print(\"Go to a pole\")\n",
+    "        case Direction.EAST:\n",
+    "            print(\"Go to the sea\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae8ab120-331d-44ee-ade0-e59398bd8faa",
+   "metadata": {},
+   "source": [
+    "## 5. Object with attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e60da709-f756-4108-a00e-5f074f3ef882",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an unnamed point: ?(0.0,0.0)\n",
+      "This is a A point: A(3,4)\n",
+      "This is an unnamed point: ?(3,5)\n",
+      "This is a point with x=7: B 12\n",
+      "This is a point with x=7: C 15\n",
+      "This is a point: D(8,12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in (\n",
+    "    Point(), Point(\"A\",3,4), Point(x=3,y=5), \n",
+    "    Point(\"B\",7,12),Point(\"C\",7,15),\n",
+    "    Point(\"D\",8,12),\n",
+    "):\n",
+    "    match p:\n",
+    "        case Point(name=\"A\"):\n",
+    "            print(\"This is a A point:\",p)\n",
+    "        case Point(name=None):\n",
+    "            print(\"This is an unnamed point:\",p)\n",
+    "        case Point(name=name,x=7,y=y):\n",
+    "            print(\"This is a point with x=7:\",name, y)\n",
+    "        case Point():\n",
+    "            print(\"This is a point:\",p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4573a740-2c80-4a7c-adbf-8b8cdefd9d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an unnamed point: ?(0.0,0.0)\n",
+      "This is a A point: A(3,4)\n",
+      "This is an unnamed point: ?(3,5)\n",
+      "This is a point with x=7: B 12\n",
+      "This is a point with x=7: C 15\n",
+      "This is a point: D(8,12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in (\n",
+    "    Point(), Point(\"A\",3,4), Point(x=3,y=5), \n",
+    "    Point(\"B\",7,12),Point(\"C\",7,15),\n",
+    "    Point(\"D\",8,12),\n",
+    "):\n",
+    "    match p:\n",
+    "        case Point(\"A\"):\n",
+    "            print(\"This is a A point:\",p)\n",
+    "        case Point(None):\n",
+    "            print(\"This is an unnamed point:\",p)\n",
+    "        case Point(str(name),7,y):\n",
+    "            print(\"This is a point with x=7:\",name, y)\n",
+    "        case Point():\n",
+    "            print(\"This is a point:\",p)"
    ]
   }
  ],
