--- a/Decoration/decorations.ipynb
+++ b/Decoration/decorations.ipynb
@@ -394,13 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "664ed66f-7732-4cb7-b84c-1c8cfe0c085a",
    "metadata": {},
    "outputs": [],
    "source": [
     "@chrono\n",
     "def fibo_rec(n):\n",
+    "    @functools.lru_cache\n",
     "    def _fibo_rec(n):\n",
     "        if n == 1:\n",
     "            return 0\n",
@@ -413,12 +414,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "b461d3f7-abf4-440f-953c-5e7a6c80129c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chrono: 0:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "63245986"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo_rec(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "7c5e9e3b-2fcb-4341-942a-b23dfa738851",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chrono: 0:00:00.001997\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "108788617463475645289761992289049744844995705477812699099751202749393926359816304226"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo_rec(400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "661088d0-db5b-4c2f-b4b8-3385fa039684",
+   "metadata": {},
+   "source": [
+    "### Decorateur twice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "0fe85039-74d6-4342-89e7-e708655dc871",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibo_rec(40)"
+    "def twice(fun):\n",
+    "    @functools.wraps(fun)\n",
+    "    def count_wrapper(*args,**kwargs):\n",
+    "        res = fun(*args,**kwargs)\n",
+    "        print(\"function called once: {}\".format(res))\n",
+    "        res = fun(*args,**kwargs)\n",
+    "        print(\"function called twice: {}\".format(res))\n",
+    "        return res\n",
+    "    return count_wrapper   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1379d370-35a4-4ae4-bf13-dae10e0850fc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "@twice\n",
+    "def fibo_rec(n):\n",
+    "    @functools.lru_cache\n",
+    "    def _fibo_rec(n):\n",
+    "        if n == 1:\n",
+    "            return 0\n",
+    "        elif n == 2:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return _fibo_rec(n-1) + _fibo_rec(n-2)\n",
+    "    return _fibo_rec(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "e745f15b-6f4f-46ef-a038-247d38ea5d92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function called once: 34\n",
+      "function called twice: 34\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo_rec(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "13461973-acd6-4e0e-9e59-0e90198e8e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@chrono\n",
+    "@twice\n",
+    "def fibo_rec(n):\n",
+    "    @functools.lru_cache\n",
+    "    def _fibo_rec(n):\n",
+    "        if n == 1:\n",
+    "            return 0\n",
+    "        elif n == 2:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return _fibo_rec(n-1) + _fibo_rec(n-2)\n",
+    "    return _fibo_rec(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "0cd87475-b89f-403f-8850-64c8f8b592d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function called once: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n",
+      "function called twice: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n",
+      "Chrono: 0:00:00.002004\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "108788617463475645289761992289049744844995705477812699099751202749393926359816304226"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo_rec(400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4868ba2e-8913-4d9c-8464-277076f4166c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@twice\n",
+    "@chrono\n",
+    "def fibo_rec(n):\n",
+    "    @functools.lru_cache\n",
+    "    def _fibo_rec(n):\n",
+    "        if n == 1:\n",
+    "            return 0\n",
+    "        elif n == 2:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return _fibo_rec(n-1) + _fibo_rec(n-2)\n",
+    "    return _fibo_rec(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "256dba84-77ce-43e3-94bc-1a616ccdda4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chrono: 0:00:00.001043\n",
+      "function called once: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n",
+      "Chrono: 0:00:00.000950\n",
+      "function called twice: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "108788617463475645289761992289049744844995705477812699099751202749393926359816304226"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo_rec(400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace88b01-79e7-47e3-b74d-815ba44dab5e",
+   "metadata": {},
+   "source": [
+    "### Decorateur repeat(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "9814493e-0395-4ca4-b952-e8294785cfc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repeat(n):\n",
+    "    def repeat_decorator(fun):\n",
+    "        @functools.wraps(fun)\n",
+    "        def repeat_wrapper(*args,**kwargs):\n",
+    "            res = None\n",
+    "            for i in range(n):\n",
+    "                res = fun(*args,**kwargs)\n",
+    "                print(f\"function called [{i}]: {res}\")\n",
+    "            return res\n",
+    "        return repeat_wrapper\n",
+    "    return repeat_decorator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "6911dc34-8444-4fb7-bb69-0fa66ef99bab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@repeat(4)\n",
+    "@chrono\n",
+    "def fibo_rec(n):\n",
+    "    @functools.lru_cache\n",
+    "    def _fibo_rec(n):\n",
+    "        if n == 1:\n",
+    "            return 0\n",
+    "        elif n == 2:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return _fibo_rec(n-1) + _fibo_rec(n-2)\n",
+    "    return _fibo_rec(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ca638d44-af42-41a2-909a-b6bab2751316",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chrono: 0:00:00.005456\n",
+      "function called [0]: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n",
+      "Chrono: 0:00:00\n",
+      "function called [1]: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n",
+      "Chrono: 0:00:00.001063\n",
+      "function called [2]: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n",
+      "Chrono: 0:00:00\n",
+      "function called [3]: 108788617463475645289761992289049744844995705477812699099751202749393926359816304226\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "108788617463475645289761992289049744844995705477812699099751202749393926359816304226"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibo_rec(400)"
    ]
   }
  ],
